[package]
name = "resp-benchmark"
version = "0.1.1"
edition = "2021"
description = "A performance benchmarking tool for RESP protocol databases."

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp", "cluster", "tokio-rustls-comp", "tls-rustls-insecure", "cluster-async"] }
num_cpus = "1.16.0"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
rand = { version = "0.8.5", features = [] }
zipf = "7.0.1"
clap = { version = "4.5.4", features = ["derive"] }
nom = "7.1.3"
number_range = "0.3.2"
core_affinity = "0.8.1"
awaitgroup = "0.7.0"
colored = "2.1.0"
rust_xlsxwriter = { version = "0.66.0", features = ["serde"] }
chrono = "0.4.38"
queues = "1.1.0"
futures = "0.3.30"
enum_dispatch = "0.3.13"
enum_delegate = "0.2.0"
serde_json = "1.0.117"
